# matriu

./: .gitignore  Cargo.toml  memory.x  readme.org
.cargo/: config
src/: board.rs  keys.rs  letters.rs  main.rs  music_theory.rs  state.rs  usb.rs
