[package]
name = "matriu"
version = "0.1.0"
edition = "2021"

[dependencies]
trellis_m4 = { path = "../atsamd/boards/trellis_m4", features = ["keypad-unproven"] }
panic-halt = "0.2"
panic-semihosting = "0.5"
smart-leds = "0.3"
ws2812-timer-delay = "0.3"

usb-device = { version = "0.2.3", features = ["control-buffer-256"] }
usbd-midi = { git = "https://github.com/x37v/usbd-midi", branch = "xnor/midi-types-only" }
cortex-m = "0.7.6"
usbd-serial = "0.1.1"

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = true

[profile.release]
lto = true
opt-level = "s"

# for cargo flash
[package.metadata]
chip = "ATSAMD51G19A"
